--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -1,12 +1,31 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
-        <title>Facelet Title</title>
+        <title>Seja Bem Vindo JSF</title>
     </h:head>
     <h:body>
-        Hello from Facelets
+
+        <h1>
+            <h:outputText value="#{controleIndex.ola}"/>
+        </h1>
+
+        <h1>
+            Data do SO: 
+            <h:outputText value="#{controleIndex.dataSO.time}"/>
+            <f:convertDateTime pattern="dd/MM/yyyy HH:mm:ss:SSS"/>
+
+            <h:outputText/>
+
+        </h1>
+
+        <h:form>
+
+            <h:commandLink value="Sobre" action="#{controleIndex.sobre()}"/>;
+
+        </h:form>
     </h:body>
 </html>
 
